[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/Characters/Monsters/Skeleton/Walk.png" type="Texture" id=1]
[ext_resource path="res://src/NPC/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Characters/Monsters/Skeleton/Idle.png" type="Texture" id=3]
[ext_resource path="res://src/NPC/Enemy/States/Move.gd" type="Script" id=4]
[ext_resource path="res://src/Main/StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://src/NPC/Enemy/States/Roaming.gd" type="Script" id=6]
[ext_resource path="res://src/NPC/Enemy/AttackRadius.gd" type="Script" id=7]
[ext_resource path="res://src/NPC/Enemy/States/Attack.gd" type="Script" id=8]
[ext_resource path="res://Assets/Characters/Monsters/Skeleton/Attack2.png" type="Texture" id=9]
[ext_resource path="res://src/Combat/Stats.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Combat/HealthBar.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/NPC/Enemy/States/TakeHit.gd" type="Script" id=12]
[ext_resource path="res://Assets/Characters/Monsters/Skeleton/Take Hit.png" type="Texture" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 13 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 13 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 13 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 9 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 9 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 9 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 9 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "take_hit",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 11.7298, 15.1685 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 10, 16.3573 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.57804, 0.57804 )
frames = SubResource( 17 )
animation = "take_hit"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 18 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 11.2623, 0.417122 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Move/Roaming")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Roaming" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Attack" type="Node" parent="StateMachine/Move"]
script = ExtResource( 8 )

[node name="AttackDelay" type="Timer" parent="StateMachine/Move/Attack"]
wait_time = 0.5

[node name="TakeHit" type="Node" parent="StateMachine/Move"]
script = ExtResource( 12 )

[node name="AttackRadius" type="Area2D" parent="."]
position = Vector2( 32.0443, -10.195 )
collision_layer = 1024
collision_mask = 0
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource( 19 )
disabled = true

[node name="Stats" parent="." instance=ExtResource( 10 )]
max_health = 30.0

[node name="HealthBar" parent="." instance=ExtResource( 11 )]
margin_left = -6.67384
margin_top = 15.2664
margin_right = -6.67384
margin_bottom = 15.2664
rect_scale = Vector2( 0.4, 0.3 )
